--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=skinet;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=skinet;Trusted_Connection=True;",
+    "HomeConnecton": "Server=PETAR-HOME\\SQLEXPRESS;Database=skinet;Trusted_Connection=True;"
   }
 }
