--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=skinet;Trusted_Connection=True;",
     "HomeConnecton": "Server=PETAR-HOME\\SQLEXPRESS;Database=skinet;Trusted_Connection=True;"
-  }
+  },
+  "ApiUrl": "https://localhost:44310/"
 }
